[feat] pin support
seperating web interface acecss password with actual alarm pin code

--- a/custom_components/sigma_connect_ha/translations/en.json
+++ b/custom_components/sigma_connect_ha/translations/en.json
@@ -8,7 +8,8 @@
         "data": {
           "host": "IP Address",
           "username": "Username",
-          "password": "Password"
+          "password": "Web Interface Password ",
+          "pin": "Alarm PIN"
         }
       }
     },
@@ -33,7 +34,8 @@
           "max_action_attempts": "Action Command Retries",
           "action_base_delay": "Action Delay (Base, s)",
           "post_action_extra_delay": "Action Delay (Verify, s)",
-          "max_consecutive_failures": "Unavailable After Failures"
+          "max_consecutive_failures": "Unavailable After Failures",
+          "pin": "Alarm PIN"
         }
       }
     }
