--- a/custom_components/sigma_connect_ha/translations/el.json
+++ b/custom_components/sigma_connect_ha/translations/el.json
@@ -8,7 +8,8 @@
         "data": {
           "host": "Διεύθυνση IP",
           "username": "Όνομα χρήστη",
-          "password": "Κωδικός πρόσβασης"
+          "password": "Κωδικός πρόσβασης Web Interface (Ixion) ",
+          "pin": "PIN συναγερμου(Κωδικός πληκτρολογίου)"
         }
       }
     },
@@ -33,7 +34,8 @@
           "max_action_attempts": "Επαναλήψεις Εντολών",
           "action_base_delay": "Καθυστέρηση Εντολών (βάση, δευτ.)",
           "post_action_extra_delay": "Καθυστέρηση Επαλήθευσης (δευτ.)",
-          "max_consecutive_failures": "Μη διαθέσιμο μετά από N αποτυχημένες προσπάθειες"
+          "max_consecutive_failures": "Μη διαθέσιμο μετά από N αποτυχημένες προσπάθειες",
+          "pin": "PIN (Κωδικός πληκτρολογίου)"
         }
       }
     }
